2009-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed string/list confusion in the message parsing
	that mishandled nick changes from irc.

2009-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Tidied up feature discovery and xep0115 caps support
	and ensure we handle conversation threads for chat sessions.

2009-05-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Improve the response to subscription requests and
	display the roster in the user list with an option to hide this.

2009-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added a muc join hook, ignore empty messages with
	chatstate notifications in chat windows. Some themeing on the
	colour dialog.
	* tkchat_power.tcl: Support detection of suspend/resume.

2009-04-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

 	* tkchat.tcl: removed misguided xml quoting from nicks and fixed a
	bug that prevented sending to a backslashed nick.
	* tkchat.tcl: tighten up our handling of jids by making more use
	of the jidsplit and jidequal functions.

2009-04-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied MacOSX patch from Daniel Steffen

2009-03-10  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::DoAnim): Only animate GIF images.

2009-03-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: [FR 2605849] Explicitly set the application name.

2009-03-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: For tinyurl links add a tooltip that shows the
	              redirection target url.

2009-02-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed the tkchat icon to an SVG based image
	* tkchat.svg:
	* tkchat.png:

2009-02-25  Joe Mistachkin  <joe@mistachkin.com>

	* tkchat.tcl: Make "tkchatrc.tcl" handling work on Windows (support
	loading of the file with or without the leading period).

2009-01-14  Reinhard Max  <max@suse.de>
